# Transcodium

./: AUTHORS  CMakeLists.txt  buildapp.sh  org.laberba.transcodium.gschema.xml
.bzr/branch/: last-revision
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
data/: Transcodium.desktop
po/: transcodium.pot
src/: Transcodium.vala  Transcodium2.vala  main.vala
src/Utils/: Notifications.vala
src/Widgets/: AddFileDialog.vala  AddJobDialog.vala
templates/: GPL_nitice.txt
templates/cmake-template/.bzr/branch/: branch.conf
templates/cmake-template/.bzr/repository/: pack-names
templates/debian-template/.bzr/branch/: branch.conf  last-revision
templates/debian-template/.bzr/checkout/: dirstate
templates/debian-template/.bzr/repository/: pack-names
